Fix a few warnings.